<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="go_first ">Person Plays First</string>
    <string name="turn_person">Your Turn to Play </string>
    <string name="turn_machine">Machine Turn</string>
    <string name="drawresult">DRAW!</string>
    <string name="personwin">YOU WON!</string>
    <string name="machinewin">MACHINE WINS!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="state">News!</string>
    <string name="person">Person:</string>
    <string name="draws">Draws:</string>
    <string name="machine">Machine:</string>
    <string name="new_game">New Game</string>
    <string name="exit">Leave Game</string>
</resources>
