<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zacck.test.ttt.MainActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvNews" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/one"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/two"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/three"
                android:textSize="60dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/four"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/five"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/six"
                android:textSize="60dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/seven"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/eight"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/nine"
                android:textSize="60dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/person" />

            <TextView
                android:id="@+id/tvPersonWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/machine" />

            <TextView
                android:id="@+id/tvMachinewins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/draws" />

            <TextView
                android:id="@+id/tvDraws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>